# PDA_UI

./: .gitignore  LICENSE.Apache  README.md  req.md  sensor_data2.db
egui-wasm/: Cargo.toml  LICENSE_MIT  build
egui-wasm/src/: lib.rs  lib_old.rs
server/: Cargo.toml  index.html  settings.json
server/src/: line_drawing.rs  main.rs  sql_parsing.rs
ui/: Cargo.toml  build  gps.csv  index.html  sensor.csv
ui/pkg/: egui_wasm.d.ts  egui_wasm.js  egui_wasm_bg.js  egui_wasm_bg.wasm  egui_wasm_bg.wasm.d.ts  hello_wasm_bg.wasm  package.json
ui/src/: config_panel.rs  egui.rs  home_panel.rs  lib.rs  line_drawing.rs  log_panel.rs  main.rs  sql_parsing.rs  utils.rs
