[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.4"
# egui = "0.23"
# eframe = "0.23"
# egui_plot = "0.23"
# egui_extras = "0.23"
csv = "1.3.0"
tokio = {version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std-native-tls"] }
futures = "0.3.30"
