[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.4"
csv = "1.3.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std-native-tls"] }
futures = "0.3.30"
serde = "1.0"
serde_json = "1.0"