[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.25"
eframe = "0.25"
egui_plot = "0.25"
egui_extras = "0.25"
csv = "1.3.0"
walkers = "0.17.0"
winapi = { version = "0.3.9", features = ["winuser"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std-native-tls"] }
anyhow = "1.0.81"
futures = "0.3.30"
async-std = "1.12.0"
tokio = {version = "1.36.0", features = ["full"] }
