[package]
name = "ui"
version = "0.1.0"
authors = ["Blake <43260601+Leopard501@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
egui = "0.25"
eframe = "0.25"
egui_plot = "0.25"
egui_extras = "0.25"
csv = "1.3.0"
winapi = { version = "0.3.9", features = ["winuser"] }
anyhow = "1.0.81"
futures = "0.3.30"
async-std = "1.12.0"
wasm-bindgen-futures = "0.4"
log = "0.4"
reqwest-wasm = { version = "0.11", features = ["json"] }
poll-promise = { version = "0.3", features = ["web"] }
serde = "1.0"
serde_json = "1.0"
walkers = "0.17.0"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"